--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "predeploy": "npm run build",
+   
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "deploy" : "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.1.1",
